[gd_scene load_steps=11 format=2]

[ext_resource path="res://pixil-frame-0.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://tilesetTest.tres" type="TileSet" id=3]
[ext_resource path="res://TileMap.gd" type="Script" id=4]
[ext_resource path="res://Minion.tscn" type="PackedScene" id=5]
[ext_resource path="res://Base_Scene.gd" type="Script" id=6]
[ext_resource path="res://UI.gd" type="Script" id=7]
[ext_resource path="res://wallset.tres" type="TileSet" id=8]

[sub_resource type="Theme" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.868, 16.3816 )

[node name="Base_Scene" type="Node2D"]
script = ExtResource( 6 )

[node name="Floors" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 65536, 1, 0, 65537, 4, 65537, 65538, 4, 131073, 65539, 4, 65538, 65540, 4, 0, 65541, 4, 131074, 65542, 4, 131073, 65543, 4, 65537, 65544, 4, 131072, 65545, 4, 65537, 65546, 4, 0, 65547, 4, 65538, 65548, 4, 1, 65549, 4, 1, 65550, 4, 131073, 65551, 4, 131072, 65552, 4, 131074, 65553, 4, 131072, 65554, 4, 0, 65555, 4, 65536, 65556, 4, 131073, 65557, 4, 131072, 65558, 4, 0, 65559, 4, 131073, 65560, 4, 1, 65561, 4, 131072, 65562, 4, 2, 65563, 4, 2, 65564, 4, 0, 65565, 4, 1, 65566, 4, 2, 65567, 4, 131073, 65568, 4, 131072, 65569, 4, 65537, 65570, 1, 0, 131072, 1, 0, 131073, 4, 131074, 131074, 4, 1, 131075, 4, 65538, 131076, 4, 65536, 131077, 4, 65538, 131078, 4, 131072, 131079, 4, 0, 131080, 4, 131074, 131081, 4, 131072, 131082, 4, 2, 131083, 4, 131073, 131084, 4, 65537, 131085, 4, 2, 131086, 4, 0, 131087, 4, 65537, 131088, 4, 2, 131089, 4, 131072, 131090, 4, 131073, 131091, 4, 65536, 131092, 4, 131074, 131093, 4, 0, 131094, 4, 65536, 131095, 4, 2, 131096, 4, 131072, 131097, 4, 131074, 131098, 4, 65537, 131099, 4, 65536, 131100, 4, 65538, 131101, 4, 65538, 131102, 4, 131074, 131103, 4, 0, 131104, 4, 2, 131105, 4, 0, 131106, 1, 0, 196608, 1, 0, 196609, 3, 0, 196610, 3, 3, 196611, 3, 0, 196612, 3, 0, 196613, 3, 2, 196614, 3, 3, 196615, 3, 3, 196616, 3, 1, 196617, 3, 2, 196618, 3, 0, 196619, 3, 3, 196620, 3, 0, 196621, 3, 2, 196622, 3, 0, 196623, 3, 2, 196624, 3, 0, 196625, 3, 1, 196626, 3, 0, 196627, 3, 2, 196628, 3, 3, 196629, 3, 1, 196630, 3, 0, 196631, 3, 0, 196632, 3, 0, 196633, 3, 1, 196634, 3, 3, 196635, 3, 3, 196636, 3, 1, 196637, 3, 0, 196638, 3, 3, 196639, 3, 2, 196640, 3, 3, 196641, 3, 2, 196642, 1, 0, 262144, 1, 0, 262145, 3, 2, 262146, 3, 2, 262147, 3, 3, 262148, 3, 2, 262149, 3, 1, 262150, 3, 0, 262151, 3, 2, 262152, 3, 3, 262153, 3, 2, 262154, 3, 1, 262155, 3, 3, 262156, 3, 3, 262157, 3, 3, 262158, 3, 2, 262159, 3, 1, 262160, 3, 2, 262161, 3, 2, 262162, 3, 1, 262163, 3, 3, 262164, 3, 0, 262165, 3, 0, 262166, 3, 2, 262167, 3, 2, 262168, 3, 2, 262169, 3, 2, 262170, 3, 0, 262171, 3, 3, 262172, 3, 3, 262173, 3, 2, 262174, 3, 0, 262175, 3, 2, 262176, 3, 2, 262177, 3, 2, 262178, 1, 0, 327680, 1, 0, 327681, 3, 3, 327682, 3, 1, 327683, 3, 3, 327684, 3, 3, 327685, 3, 3, 327686, 3, 3, 327687, 3, 1, 327688, 3, 1, 327689, 3, 2, 327690, 3, 3, 327691, 3, 2, 327692, 3, 0, 327693, 3, 2, 327694, 3, 0, 327695, 3, 0, 327696, 3, 3, 327697, 3, 3, 327698, 3, 3, 327699, 3, 2, 327700, 3, 3, 327701, 3, 0, 327702, 3, 3, 327703, 3, 2, 327704, 3, 1, 327705, 3, 3, 327706, 3, 2, 327707, 3, 0, 327708, 3, 3, 327709, 3, 3, 327710, 3, 1, 327711, 3, 0, 327712, 3, 3, 327713, 3, 0, 327714, 1, 0, 393216, 1, 0, 393217, 3, 2, 393218, 3, 0, 393219, 3, 0, 393220, 3, 2, 393221, 3, 1, 393222, 3, 1, 393223, 3, 1, 393224, 3, 1, 393225, 3, 1, 393226, 3, 3, 393227, 3, 1, 393228, 3, 0, 393229, 3, 0, 393230, 3, 2, 393231, 3, 0, 393232, 3, 0, 393233, 3, 0, 393234, 3, 1, 393235, 3, 0, 393236, 3, 0, 393237, 3, 3, 393238, 3, 3, 393239, 3, 0, 393240, 3, 1, 393241, 3, 3, 393242, 3, 2, 393243, 3, 0, 393244, 3, 3, 393245, 3, 2, 393246, 3, 1, 393247, 3, 2, 393248, 3, 0, 393249, 3, 0, 393250, 1, 0, 458752, 1, 0, 458753, 3, 1, 458754, 3, 2, 458755, 3, 1, 458756, 3, 2, 458757, 3, 1, 458758, 3, 1, 458759, 3, 1, 458760, 3, 2, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 2, 458767, 3, 0, 458768, 3, 3, 458769, 3, 3, 458770, 3, 2, 458771, 3, 0, 458772, 3, 0, 458773, 3, 1, 458774, 3, 2, 458775, 3, 2, 458776, 3, 1, 458777, 3, 0, 458778, 3, 3, 458779, 3, 2, 458780, 3, 1, 458781, 3, 3, 458782, 3, 2, 458783, 3, 2, 458784, 3, 2, 458785, 3, 2, 458786, 1, 0, 524288, 1, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 2, 524292, 3, 0, 524293, 3, 3, 524294, 3, 1, 524295, 3, 3, 524296, 3, 2, 524297, 3, 1, 524298, 3, 3, 524299, 3, 2, 524300, 3, 1, 524301, 3, 3, 524302, 3, 3, 524303, 3, 1, 524304, 3, 3, 524305, 3, 3, 524306, 3, 3, 524307, 3, 3, 524308, 3, 0, 524309, 3, 2, 524310, 3, 1, 524311, 3, 2, 524312, 3, 1, 524313, 3, 0, 524314, 3, 2, 524315, 3, 3, 524316, 3, 1, 524317, 3, 2, 524318, 3, 0, 524319, 3, 1, 524320, 3, 0, 524321, 3, 3, 524322, 1, 0, 589824, 1, 0, 589825, 3, 0, 589826, 3, 3, 589827, 3, 2, 589828, 3, 1, 589829, 3, 0, 589830, 3, 1, 589831, 3, 2, 589832, 3, 0, 589833, 3, 2, 589834, 3, 1, 589835, 3, 1, 589836, 3, 2, 589837, 3, 1, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 3, 589843, 3, 3, 589844, 3, 3, 589845, 3, 2, 589846, 3, 1, 589847, 3, 2, 589848, 3, 2, 589849, 3, 1, 589850, 3, 0, 589851, 3, 1, 589852, 3, 0, 589853, 3, 2, 589854, 3, 3, 589855, 3, 0, 589856, 3, 2, 589857, 3, 1, 589858, 1, 0, 655360, 1, 0, 655361, 3, 3, 655362, 3, 2, 655363, 3, 1, 655364, 3, 1, 655365, 3, 3, 655366, 3, 3, 655367, 3, 2, 655368, 3, 1, 655369, 3, 3, 655370, 3, 3, 655371, 3, 1, 655372, 3, 1, 655373, 3, 3, 655374, 3, 0, 655375, 3, 0, 655376, 3, 2, 655377, 3, 1, 655378, 3, 0, 655379, 3, 1, 655380, 3, 0, 655381, 3, 1, 655382, 3, 0, 655383, 3, 0, 655384, 3, 3, 655385, 3, 0, 655386, 3, 0, 655387, 3, 1, 655388, 3, 0, 655389, 3, 0, 655390, 3, 0, 655391, 3, 3, 655392, 3, 1, 655393, 3, 2, 655394, 1, 0, 720896, 1, 0, 720897, 3, 3, 720898, 3, 2, 720899, 3, 3, 720900, 3, 3, 720901, 3, 2, 720902, 3, 2, 720903, 3, 2, 720904, 3, 3, 720905, 3, 1, 720906, 3, 1, 720907, 3, 0, 720908, 3, 1, 720909, 3, 0, 720910, 3, 2, 720911, 3, 3, 720912, 3, 2, 720913, 3, 0, 720914, 3, 2, 720915, 3, 0, 720916, 3, 2, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, 3, 1, 720921, 3, 2, 720922, 3, 1, 720923, 3, 1, 720924, 3, 3, 720925, 3, 0, 720926, 3, 3, 720927, 3, 3, 720928, 3, 1, 720929, 3, 3, 720930, 1, 0, 786432, 1, 0, 786433, 3, 1, 786434, 3, 0, 786435, 3, 0, 786436, 3, 2, 786437, 3, 3, 786438, 3, 3, 786439, 3, 3, 786440, 3, 2, 786441, 3, 1, 786442, 3, 3, 786443, 3, 3, 786444, 3, 2, 786445, 3, 2, 786446, 3, 1, 786447, 3, 0, 786448, 3, 0, 786449, 3, 1, 786450, 3, 2, 786451, 3, 2, 786452, 3, 2, 786453, 3, 0, 786454, 3, 3, 786455, 3, 0, 786456, 3, 0, 786457, 3, 1, 786458, 3, 3, 786459, 3, 1, 786460, 3, 3, 786461, 3, 2, 786462, 3, 3, 786463, 3, 0, 786464, 3, 0, 786465, 3, 0, 786466, 1, 0, 851968, 1, 0, 851969, 3, 2, 851970, 3, 3, 851971, 3, 2, 851972, 3, 3, 851973, 3, 0, 851974, 3, 0, 851975, 3, 3, 851976, 3, 3, 851977, 3, 3, 851978, 3, 0, 851979, 3, 3, 851980, 3, 2, 851981, 3, 0, 851982, 3, 3, 851983, 3, 3, 851984, 3, 3, 851985, 3, 2, 851986, 3, 1, 851987, 3, 3, 851988, 3, 2, 851989, 3, 2, 851990, 3, 3, 851991, 3, 2, 851992, 3, 1, 851993, 3, 3, 851994, 3, 0, 851995, 3, 3, 851996, 3, 2, 851997, 3, 0, 851998, 3, 2, 851999, 3, 0, 852000, 3, 2, 852001, 3, 1, 852002, 1, 0, 917504, 1, 0, 917505, 3, 1, 917506, 3, 3, 917507, 3, 3, 917508, 3, 0, 917509, 3, 2, 917510, 3, 2, 917511, 3, 0, 917512, 3, 0, 917513, 3, 1, 917514, 3, 2, 917515, 3, 1, 917516, 3, 3, 917517, 3, 1, 917518, 3, 3, 917519, 3, 2, 917520, 3, 0, 917521, 3, 0, 917522, 3, 1, 917523, 3, 1, 917524, 3, 2, 917525, 3, 3, 917526, 3, 1, 917527, 3, 0, 917528, 3, 3, 917529, 3, 2, 917530, 3, 1, 917531, 3, 0, 917532, 3, 0, 917533, 3, 1, 917534, 3, 2, 917535, 3, 3, 917536, 3, 3, 917537, 3, 2, 917538, 1, 0, 983040, 1, 0, 983041, 3, 0, 983042, 3, 3, 983043, 3, 3, 983044, 3, 2, 983045, 3, 0, 983046, 3, 2, 983047, 3, 0, 983048, 3, 0, 983049, 3, 1, 983050, 3, 1, 983051, 3, 1, 983052, 3, 3, 983053, 3, 3, 983054, 3, 0, 983055, 3, 1, 983056, 3, 1, 983057, 3, 0, 983058, 3, 2, 983059, 3, 3, 983060, 3, 0, 983061, 3, 3, 983062, 3, 0, 983063, 3, 3, 983064, 3, 1, 983065, 3, 2, 983066, 3, 0, 983067, 3, 2, 983068, 3, 3, 983069, 3, 3, 983070, 3, 0, 983071, 3, 3, 983072, 3, 1, 983073, 3, 2, 983074, 1, 0, 1048576, 1, 0, 1048577, 3, 1, 1048578, 3, 2, 1048579, 3, 1, 1048580, 3, 1, 1048581, 3, 0, 1048582, 3, 0, 1048584, 3, 2, 1048585, 3, 3, 1048586, 3, 3, 1048587, 3, 2, 1048588, 3, 1, 1048589, 3, 1, 1048590, 3, 2, 1048591, 3, 2, 1048592, 3, 1, 1048593, 3, 0, 1048594, 3, 2, 1048595, 3, 0, 1048596, 3, 2, 1048597, 3, 3, 1048598, 3, 2, 1048599, 3, 3, 1048600, 3, 2, 1048601, 3, 0, 1048602, 3, 2, 1048603, 3, 3, 1048604, 3, 3, 1048605, 3, 2, 1048606, 3, 2, 1048607, 3, 0, 1048608, 3, 0, 1048609, 3, 2, 1048610, 1, 0, 1114112, 1, 0, 1114113, 3, 2, 1114114, 3, 3, 1114115, 3, 1, 1114116, 3, 1, 1114117, 3, 2, 1114118, 3, 1, 1114119, 3, 1, 1114120, 3, 2, 1114121, 3, 3, 1114122, 3, 3, 1114123, 3, 3, 1114124, 3, 0, 1114125, 3, 0, 1114126, 3, 0, 1114127, 3, 3, 1114128, 3, 0, 1114129, 3, 3, 1114130, 3, 0, 1114131, 3, 0, 1114132, 3, 1, 1114133, 3, 1, 1114134, 3, 1, 1114135, 3, 2, 1114136, 3, 2, 1114137, 3, 3, 1114138, 3, 3, 1114139, 3, 2, 1114140, 3, 3, 1114141, 3, 1, 1114142, 3, 3, 1114143, 3, 0, 1114144, 3, 1, 1114145, 3, 1, 1114146, 1, 0, 1179648, 1, 0, 1179649, 3, 2, 1179650, 3, 3, 1179651, 3, 0, 1179652, 3, 2, 1179653, 3, 0, 1179654, 3, 1, 1179655, 3, 3, 1179656, 3, 0, 1179657, 3, 1, 1179658, 3, 2, 1179659, 3, 2, 1179660, 3, 3, 1179661, 3, 0, 1179662, 3, 1, 1179663, 3, 2, 1179664, 3, 1, 1179665, 3, 0, 1179666, 3, 2, 1179667, 3, 1, 1179668, 3, 0, 1179669, 3, 1, 1179670, 3, 2, 1179671, 3, 2, 1179672, 3, 0, 1179673, 3, 1, 1179674, 3, 3, 1179675, 3, 1, 1179676, 3, 2, 1179677, 3, 2, 1179678, 3, 0, 1179679, 3, 3, 1179680, 3, 0, 1179681, 3, 0, 1179682, 1, 0, 1245184, 1, 0, 1245185, 1, 0, 1245186, 1, 0, 1245187, 1, 0, 1245188, 1, 0, 1245189, 1, 0, 1245190, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 1, 0, 1245195, 1, 0, 1245196, 1, 0, 1245197, 1, 0, 1245198, 1, 0, 1245199, 1, 0, 1245200, 1, 0, 1245201, 1, 0, 1245202, 1, 0, 1245203, 1, 0, 1245204, 1, 0, 1245205, 1, 0, 1245206, 1, 0, 1245207, 1, 0, 1245208, 1, 0, 1245209, 1, 0, 1245210, 1, 0, 1245211, 1, 0, 1245212, 1, 0, 1245213, 1, 0, 1245214, 1, 0, 1245215, 1, 0, 1245216, 1, 0, 1245217, 1, 0, 1245218, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Buildable" type="TileMap" parent="."]
rotation = -4.46638e-06
tile_set = ExtResource( 8 )
centered_textures = true
collision_use_kinematic = true
format = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 1050.84, 624.403 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="UI" type="Control" parent="Player/Camera2D"]
margin_left = -510.958
margin_top = 249.382
margin_right = -464.958
margin_bottom = 295.382
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildList" type="ItemList" parent="Player/Camera2D/UI"]
margin_top = -78.9999
margin_right = 355.0
margin_bottom = 40.0001
mouse_filter = 1
max_columns = 7
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minion commands" type="MenuButton" parent="Player/Camera2D/UI"]
anchor_left = 19.357
anchor_top = -0.26
anchor_right = 21.888
anchor_bottom = 0.5
margin_left = 25.3979
margin_top = 8.26682
margin_right = -28.0281
margin_bottom = -6.69317
theme = SubResource( 1 )
text = "OHHHH"
items = [ "Test1", null, 0, false, false, 0, 0, null, "", false, "Test2", null, 0, false, false, 1, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Player/Camera2D/UI"]
anchor_right = 0.5
margin_left = 759.04
margin_top = -22.9289
margin_right = 888.04
margin_bottom = 27.0711
text = "Minion"
items = [ "Minion", null, false, 0, null, "Player", null, false, 1, null, "Build", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( -41.1574, -64.6759 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -2.78406, 15.1047 )
shape = SubResource( 2 )

[node name="Minion" parent="." instance=ExtResource( 5 )]
position = Vector2( 128, 117.333 )

[connection signal="item_selected" from="Player/Camera2D/UI/BuildList" to="." method="_on_ItemList_item_selected"]
[connection signal="mouse_entered" from="Player/Camera2D/UI/BuildList" to="." method="_on_ItemList_mouse_entered"]
[connection signal="mouse_exited" from="Player/Camera2D/UI/BuildList" to="." method="_on_ItemList_mouse_exited"]
